add : cart update action

--- a/frontend/src/pages/ProductDetails/ProductDetails.css
+++ b/frontend/src/pages/ProductDetails/ProductDetails.css
@@ -129,7 +129,10 @@
     max-width: 900px;
 }
 
-
+.product-single__short-desc{
+    overflow: hidden;
+    max-height: 100px;
+}
 
 .product-single__tabs .tabcontent {
     margin: 50px 0;
