--- a/frontend/src/components/Pagination/Pagination.css
+++ b/frontend/src/components/Pagination/Pagination.css
@@ -7,7 +7,7 @@
     background-color: rgba(0, 0, 0, 0.09);
 }
 
-.progress-bar::after {
+.progress-fill {
     content: "";
     position: absolute;
     top: 0;
@@ -15,5 +15,4 @@
     border-radius: 20px;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.80);
-    width: 100px;
 }
