--- a/frontend/src/components/Product/ProductCard.css
+++ b/frontend/src/components/Product/ProductCard.css
@@ -21,7 +21,7 @@
     opacity: 0;
     z-index: -50;
     border-radius: 5px;
-    transition: all 0.2s ease-out;
+    transition: all 0.4s ;
 }
 .product-card:hover .pc__addcart{
    
