--- a/frontend/src/style/button.css
+++ b/frontend/src/style/button.css
@@ -92,6 +92,12 @@
     background-color: var(--black);
 }
 
+.btn-primary.disabled{
+    background-color: #585757;
+
+    pointer-events: none;
+}
+
 .button:hover {
     opacity: 0.9;
 }
