--- a/frontend/src/style/input.css
+++ b/frontend/src/style/input.css
@@ -34,6 +34,9 @@ textarea:focus {
 textarea {
     resize: none;
 }
+.input-danger{
+    border: 1px solid red;
+}
 
 .custom-label{
     color: var(--light-gray);
