--- a/frontend/src/style/typography.css
+++ b/frontend/src/style/typography.css
@@ -100,3 +100,11 @@
     padding-left: 40px;
     font-size: 1.4rem;
 }
+
+/* truncate */
+
+.truncate {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
