feat : checkout with stripe

--- a/frontend/src/style/button.css
+++ b/frontend/src/style/button.css
@@ -93,10 +93,11 @@
     background-color: var(--black);
 }
 
+.disabled {
+    pointer-events: none !important;
+}
 .btn-primary.disabled{
     background-color: #585757;
-
-    pointer-events: none;
 }
 
 .button:hover {
