--- a/frontend/src/pages/Account/Account.css
+++ b/frontend/src/pages/Account/Account.css
@@ -1,4 +1,3 @@
-
 .account-row {
     display: flex;
     flex-wrap: wrap;
@@ -69,40 +68,60 @@
     padding: 20px 10px;
 }
 
-.my-account__address-list{
+.my-account__address-list {
     display: flex;
     flex-wrap: wrap;
 }
-.my-account__address-item{
+
+.my-account__address-item {
     width: 50%;
     padding: 0 20px 0 0;
 }
-.my-account__address-item__title h6{
+
+.address_wraper {
+    border: 1px solid rgba(34, 34, 34, 0.05);
+    margin: 10px 10px;
+    padding: 0 10px;
+    border-radius: 4px;
+}
+.selected-address {
+    border: 1px solid rgba(34, 34, 34, 0.55);
+    transition: all 0.2s;
+    box-shadow: 0 0.625rem 1.5625rem 0 rgba(34, 34, 34, 0.05);
+}
+
+.my-account__address-item__title h6 {
     font-size: 1.6rem;
 }
 
-.my-account__details-row{
+.my-account__details-row {
     width: 100%;
 }
-.my-account__details-wrapper{
+
+.my-account__details-wrapper {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
-.my-account__details-wrapper .col-6{
+
+.my-account__details-wrapper .col-6 {
     width: 50%;
 }
-.my-account__details-wrapper .col-12{
+
+.my-account__details-wrapper .col-12 {
     width: 100%;
 }
-.my-account__details-wrapper .group{
+
+.my-account__details-wrapper .group {
     padding-right: 10px;
     margin: 10px 0;
 }
-.my-account__details-wrapper .group input{
+
+.my-account__details-wrapper .group input {
     width: 100%;
 }
-.my-account__details-wrapper .btn-primary{
+
+.my-account__details-wrapper .btn-primary {
     padding: 20px 10px;
     margin: 30px 0;
     width: 40%;
@@ -131,7 +150,8 @@
     .my-account__section .my-account__dashboard {
         width: 90%;
     }
-    .my-account__address-item{
+
+    .my-account__address-item {
         width: 100%;
         padding: 0;
     }
