--- a/frontend/src/pages/Shop/Shop.css
+++ b/frontend/src/pages/Shop/Shop.css
@@ -24,7 +24,7 @@
 /* shop aside */
 
 
-.aside-filter__wraper::after{
+.aside-filter__wraper::after {
     content: "";
     position: absolute;
     top: 0;
@@ -117,6 +117,11 @@
     .shop-banner-container {
         width: 100vw !important;
         padding: 0;
+    }
+
+    .shop-main .container {
+        width: 100% !important;
+        padding: 0 1rem;
     }
 
     .shop-banner__items .shop-banner__item {
